syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package="./pb";

package user;

service UserService {
    rpc Register (RegisterUser) returns (Token);
    rpc Login (LoginUser) returns (Token);
    rpc Validate (Token) returns (User);

    rpc GetAll (UsersQuery) returns (Users);
    rpc GetById (UserId) returns (User);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;

    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Users {
    repeated User users = 1;
}

message RegisterUser {
    string email = 1;
    string name = 2;
    string password = 3;
}

message LoginUser {
    string email = 1;
    string password = 2;
}

message UserId {
    string id = 1;
}

message Token {
    string token = 1;
}

message UsersQuery {
    int64 page = 1;
    int64 size = 2;
}